# pricingapi-client-python

./: .gitignore  LICENSE  README.md  example.py  generate.sh  generator.sh  git_push.sh  openapi_doc.json  pricing_api_client_README.md  pyproject.toml  setup.py  tox.ini
docs/: DefaultApi.md  GithubComBaselinehqGolangSharedTypesInstance.md  GithubComBaselinehqGolangSharedTypesProvider.md  GithubComBaselinehqGolangSharedTypesService.md  GithubComBaselinehqGolangSharedTypesUsageType.md  GithubComBaselinehqGolangSharedTypesVM.md  GithubComBaselinehqPricingapiPkgTypesStatus.md  ProviderConfig.md  SchemaComputePricingsRow.md  SchemaDiskPricingsRow.md  TypesComputeRequest.md  TypesComputeResultsValueInner.md  TypesCustomPriceRequest.md  TypesCustomPricingResponse.md  TypesDisk.md  TypesDiskRequest.md  TypesDiskResultsValueInner.md  TypesMarketplaceProvidersResponse.md  TypesPredicates.md  TypesSavings.md
examples/: example.py
pricing_api_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
test/: test_default_api.py  test_github_com_baselinehq_golang_shared_types_instance.py  test_github_com_baselinehq_golang_shared_types_provider.py  test_github_com_baselinehq_golang_shared_types_service.py  test_github_com_baselinehq_golang_shared_types_usage_type.py  test_github_com_baselinehq_golang_shared_types_vm.py  test_github_com_baselinehq_pricingapi_pkg_types_status.py  test_provider_config.py  test_schema_compute_pricings_row.py  test_schema_disk_pricings_row.py  test_types_compute_request.py  test_types_compute_results_value_inner.py  (+8 more)
(+37 files in other folders)
